--- a/People/AppShell.xaml
+++ b/People/AppShell.xaml
@@ -8,7 +8,7 @@
 
     <ShellContent
         Title="People"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate local:Views.MainPage}"
         Route="MainPage" />
 
 </Shell>
