--- a/People/Views/MainPage.xaml
+++ b/People/Views/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="People.MainPage" 
+             x:Class="People.Views.MainPage" 
              BackgroundColor="{DynamicResource Light}">
 
     <Grid Padding="5" RowSpacing="5" ColumnSpacing="5"
